[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/UI.gd" type="Script" id=2]
[ext_resource path="res://Game/Game.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/cmu-typewriter/Typewriter.tres" type="DynamicFont" id=4]

[node name="UI" type="MarginContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="."]
pause_mode = 1
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
size_override_stretch = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Game" parent="ViewportContainer/Viewport" instance=ExtResource( 3 )]

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="TimeLabel" type="Label" parent="MarginContainer"]
margin_left = 810.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 51.0
size_flags_horizontal = 8
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
text = "00:00:00.000"
align = 2

[node name="VersionLabel" type="Label" parent="MarginContainer"]
margin_left = 10.0
margin_top = 550.0
margin_right = 100.0
margin_bottom = 590.0
size_flags_horizontal = 0
size_flags_vertical = 12
text = "v0.1.8"

[node name="CenterContainer" type="CenterContainer" parent="."]
pause_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VictoryPopup" type="Panel" parent="CenterContainer"]
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VictoryPopup"]
margin_left = 5.0
margin_top = 5.0
margin_right = 139.0
margin_bottom = 93.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VictoryLabel" type="Label" parent="CenterContainer/VictoryPopup/VBoxContainer"]
margin_right = 134.0
margin_bottom = 40.0
text = "U WIN :)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="CenterContainer/VictoryPopup/VBoxContainer"]
margin_top = 44.0
margin_right = 134.0
margin_bottom = 88.0
text = "Restart [R]"

[node name="DeathPopup" type="Panel" parent="CenterContainer"]
visible = false
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/DeathPopup"]
margin_left = 5.0
margin_top = 5.0
margin_right = 238.0
margin_bottom = 93.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathLabel" type="Label" parent="CenterContainer/DeathPopup/VBoxContainer"]
margin_right = 233.0
margin_bottom = 40.0
text = "U DEAD MATE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="CenterContainer/DeathPopup/VBoxContainer"]
margin_top = 44.0
margin_right = 233.0
margin_bottom = 88.0
text = "Restart [R]"

[connection signal="death" from="ViewportContainer/Viewport/Game" to="." method="_on_Game_death"]
[connection signal="victory" from="ViewportContainer/Viewport/Game" to="." method="_on_Game_victory"]
[connection signal="pressed" from="CenterContainer/VictoryPopup/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="CenterContainer/VictoryPopup/VBoxContainer/RestartButton" to="ViewportContainer/Viewport/Game" method="_on_RestartButton_pressed"]
[connection signal="pressed" from="CenterContainer/DeathPopup/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="CenterContainer/DeathPopup/VBoxContainer/RestartButton" to="ViewportContainer/Viewport/Game" method="_on_RestartButton_pressed"]
